--- a/web/templates/forum/admin.html
+++ b/web/templates/forum/admin.html
@@ -28,9 +28,9 @@
     </div>
 
     <div class="card shadow-sm">
-        <div class="card-body p-0">
-            <table class="table table-striped table-hover mb-0">
-                <thead class="table-light">
+        <div class="card-body p-0 bg-white">
+            <table class="table table-striped table-hover mb-0 text-dark">
+                <thead class="table-dark">
                     <tr>
                         <th class="ps-3">排序</th>
                         <th>ID</th>
